[gd_scene load_steps=6 format=3 uid="uid://cbu1acdxkc7x"]

[ext_resource type="Script" path="res://ui/PoiseBar.gd" id="1_pd8dv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qlnyf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oxu22"]
bg_color = Color(0.235294, 0.368627, 0.545098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hc1lc"]
bg_color = Color(0, 0, 0, 0.54902)
shadow_color = Color(0, 0, 0, 0.27451)
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l51ve"]
bg_color = Color(1, 1, 1, 1)

[node name="PoiseBar" type="ProgressBar"]
z_index = 1
anchors_preset = -1
anchor_left = 0.003
anchor_right = 0.004
anchor_bottom = 0.003
offset_left = -3.456
offset_right = 3.392
offset_bottom = 0.056
pivot_offset = Vector2(4, 1)
size_flags_horizontal = 0
theme_override_styles/background = SubResource("StyleBoxEmpty_qlnyf")
theme_override_styles/fill = SubResource("StyleBoxFlat_oxu22")
value = 50.0
show_percentage = false
script = ExtResource("1_pd8dv")

[node name="damageBar" type="ProgressBar" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_hc1lc")
theme_override_styles/fill = SubResource("StyleBoxFlat_l51ve")
value = 80.0
show_percentage = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
